--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-community/cli-platform-android": "^11.3.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "axios": "^1.5.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-ble-manager": "^10.1.5",
     "react-native-bluetooth-classic": "^1.60.0-rc.29",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "^6.2.2",
