--- a/package.json
+++ b/package.json
@@ -12,20 +12,25 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/cli-platform-android": "^11.3.9",
+    "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "axios": "^1.5.1",
+    "lottie-react-native": "^6.4.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-ble-manager": "^10.1.5",
     "react-native-bluetooth-classic": "^1.60.0-rc.29",
+    "react-native-date-picker": "^4.3.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "^6.2.2",
     "react-native-paper": "^5.11.0",
     "react-native-paper-tabs": "^0.10.1",
+    "react-native-picker-select": "^9.0.0",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.26.0",
+    "react-native-snackbar": "^2.6.2",
     "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
