--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -78,8 +78,8 @@ android {
         applicationId "com.sumaqao.pesaje"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 10007
-        versionName "1.0.7"
+        versionCode 10008
+        versionName "1.0.8"
     }
     signingConfigs {
         debug {
@@ -118,6 +118,7 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+    implementation project(':react-native-fs')
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
