--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-ble-manager": "^10.1.5",
     "react-native-bluetooth-classic": "^1.60.0-rc.29",
     "react-native-date-picker": "^4.3.3",
+    "react-native-fs": "^2.20.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "^6.2.2",
     "react-native-paper": "^5.11.0",
@@ -32,6 +33,7 @@
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.26.0",
     "react-native-snackbar": "^2.6.2",
+    "react-native-sound": "^0.11.2",
     "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
